--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libfm-ffmpeg-columns (0.1-3) testing; urgency=medium
+
+  * Remove explicit libav* dependencies
+
+ -- Livanh <livanh@protonmail.com>  Wed, 02 Aug 2023 15:15:04 +0200
+
 libfm-ffmpeg-columns (0.1-2) testing; urgency=medium
 
   * Changed email address
